<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.roosoars.taskflow.ui.fragments.TaskListFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskListFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.roosoars.taskflow.ui.fragments.AddTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_add_task">
        <argument
            android:name="taskId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.roosoars.taskflow.ui.fragments.CategoryFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_category">
    </fragment>
</navigation>